@@ -2,6 +2,8 @@
 	* Add a "no-archive-mode" switch, which means file permissions and
 	  timestamp are not copied.
 	* Add a verbosity 3 printout for block sizes used
+	* Change default roll-win to 8192, for higher standard deviation on
+	  window sizes
 
 Version 0.03
 
